# nomad-oasis-image

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.monitoring.yaml  docker-compose.yaml  nomad.yaml  plugins.txt  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nginx_base_conf  nginx_https.conf  nomad.yaml
nomad-oasis/: docker-compose.yaml
nomad-oasis/configs/: nomad.yaml
nomad-oasis_files/nomad-oasis/: docker-compose.yaml
scripts/: backup-mongo.sh  create-volumes.sh  generate-env.sh
