[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[parsing, infrastructure]>=1.4.0",
  "setuptools",
]


[project.urls]
repository = "https://github.com/DTU-Nanolab-materials-discovery/nomad-oasis-image"

[project.optional-dependencies]
plugins = [
  "nomad-simulations>=0.0.1",
  "nomad-schema-plugin-run>=1.0.1",
  "nomad-schema-plugin-simulation-workflow>=1.0.1",
  "nomad-normalizer-plugin-bandstructure>=1.0",
  "nomad-normalizer-plugin-dos>=1.0",
  "nomad-normalizer-plugin-soap>=1.0",
  "nomad-normalizer-plugin-spectra>=1.0",
  "nomad-normalizer-plugin-system>=1.0.5",
  "nomad-normalizer-plugin-simulation-workflow>=1.0",
  "nomad-parser-plugins-electronic>=1.0",
  "nomad-parser-plugins-atomistic>=1.0.6",
  "nomad-parser-plugins-workflow>=1.0",
  "nomad-parser-plugins-database>=1.0",
  "nomad-material-processing==1.0.4",
  "nomad-measurements>=1.3.2",
  "nomad-dtu-nanolab-plugin",
]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
override-dependencies = ["jsonschema==4.23"]
prerelease = "explicit"

[tool.uv.sources]
nomad-dtu-nanolab-plugin = { git = "https://github.com/DTU-Nanolab-materials-discovery/nomad-dtu-nanolab-plugin.git", rev = "v0.4.4" }

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
